# sysprog

./: .gitignore
1/: .gitignore  CMakeLists.txt  Makefile  checker.py  external_sort.c  external_sort.h  external_sort.с  generator.py  insertion_sort.c  insertion_sort.h  libcoro.c  merge_files.c  number_file_reader.c  number_file_reader.h  priority_queue.c  quick_sort.c  quick_sort.h  run-test.sh  solution copy.c  solution.c  solution.md  stack.c  timespec_helpers.c  utils.c  utils.h
1/include/: insertion_sort.h  libcoro.h  merge_files.h  number_file_reader.h  priority_queue.h  stack.h  timespec_helpers.h  utils.h
2/: .clang-format  CMakeLists.txt  builtin_command.c  exec_command.c  parse_command.c  parser.c  solution.c  solution.md
2/include/: builtin_command.h  command.h  exec_command.h  parse_command.h  parser.h
3/: CMakeLists.txt  solution.md  test.c  userfs.c
3/include/: userfs.h
4/: CMakeLists.txt  task_queue.c  test.c  thread_pool.c
4/include/: task_queue.h  thread_pool.h
5/: CMakeLists.txt  chat_client.c  chat_server.c  queue.c  recv_buf.c  send_queue.c
5/include/: chat.h  queue.h  recv_buf.h  send_queue.h
